[gd_scene load_steps=9 format=3 uid="uid://d2n67iox5s2gc"]

[ext_resource type="Script" uid="uid://cyyh484en6285" path="res://scenes/screens/add_item/add_item.gd" id="1_ca0c4"]
[ext_resource type="FontFile" uid="uid://bll5g7hqu1vkt" path="res://assets/fonts/Roboto-Medium.ttf" id="2_gqahb"]
[ext_resource type="FontFile" uid="uid://djmj6mcpi6goq" path="res://assets/fonts/Roboto-Bold.ttf" id="3_afija"]
[ext_resource type="FontFile" uid="uid://bslo4xtedu75k" path="res://assets/fonts/Roboto-Regular.ttf" id="4_wikg3"]
[ext_resource type="PackedScene" uid="uid://dnhyb6von10hj" path="res://scenes/widgets/icon_selector/icon_selector.tscn" id="5_ccofs"]

[sub_resource type="LabelSettings" id="LabelSettings_tsiy7"]
font = ExtResource("3_afija")
font_size = 40
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_hvv3k"]
font = ExtResource("2_gqahb")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_f7c4h"]
font = ExtResource("2_gqahb")
font_size = 24

[node name="AddItem" type="Control" node_paths=PackedStringArray("icon_selector", "name_edit", "type_edit")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ca0c4")
icon_selector = NodePath("MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/IconSelector")
name_edit = NodePath("MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/NameField/NameEdit")
type_edit = NodePath("MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/TypeField/TypeEdit")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LeftOptions" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="BackBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftOptions"]
custom_minimum_size = Vector2(80, 48)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_gqahb")
theme_override_font_sizes/font_size = 20
text = "Back"

[node name="TitleLbl" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Add Item"
label_settings = SubResource("LabelSettings_tsiy7")
horizontal_alignment = 1

[node name="RightOptions" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
alignment = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="IconSelector" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("5_ccofs")]
layout_mode = 2

[node name="NameField" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="NameLbl" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/NameField"]
layout_mode = 2
text = "Name:"
label_settings = SubResource("LabelSettings_hvv3k")

[node name="NameEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/NameField"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_wikg3")
theme_override_font_sizes/font_size = 20
placeholder_text = "eg: The Lord of The Rings"

[node name="TypeField" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="TypeLbl" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/TypeField"]
layout_mode = 2
text = "Type:"
label_settings = SubResource("LabelSettings_f7c4h")

[node name="TypeEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/TypeField"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_wikg3")
theme_override_font_sizes/font_size = 20
placeholder_text = "eg: Film"

[node name="AddBtn" type="Button" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(110, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_gqahb")
theme_override_font_sizes/font_size = 20
text = "Add Item"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/LeftOptions/BackBtn" to="." method="_on_back_btn_pressed"]
[connection signal="icon_selected" from="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/IconSelector" to="." method="_on_icon_selector_icon_selected"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/NameField/NameEdit" to="." method="_on_name_edit_text_changed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/TypeField/TypeEdit" to="." method="_on_type_edit_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/AddBtn" to="." method="_on_add_btn_pressed"]
